--- a/index.html
+++ b/index.html
@@ -18,23 +18,26 @@
     <meta name="author" content="Your Name" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://roadtolegacy.itlegacy.team/" />
     <meta property="og:title" content="Road To Legacy" />
     <meta
       property="og:description"
       content="The Flagship Event IT LEGACY, EMPOWERING THE NEXT GENERATION OF IT LEADERS"
     />
-    <meta property="og:image" content="/about-banner.jpeg" />
+    <meta property="og:image" content="/about-banner.png" />
 
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="" />
+    <meta
+      property="twitter:url"
+      content="https://roadtolegacy.itlegacy.team/"
+    />
     <meta property="twitter:title" content="Road To Legacy" />
     <meta
       property="twitter:description"
       content="The Flagship Event IT LEGACY, EMPOWERING THE NEXT GENERATION OF IT LEADERS"
     />
-    <meta property="twitter:image" content="/about-banner.jpeg" />
-    <link rel="preload" as="image" href="/about-banner.jpeg" />
+    <meta property="twitter:image" content="/about-banner.png" />
+    <link rel="preload" as="image" href="/about-banner.png" />
     <link rel="preload" as="image" href="/assets/bg.png" />
 
     <title>Road To Legacy 1.0 | The Flagship Event IT LEGACY</title>
